crates/ast/tests/snapshots/ast__expression_base.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    [
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:6 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:0 },
                                end: AstPoint { 0:6 },
                            },
                            value: "Logger",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:6 },
                    end: AstPoint { 0:7 },
                },
                ident: None,
                values: None,
                operator: Dot(
                    AstRange {
                        start: AstPoint { 0:6 },
                        end: AstPoint { 0:7 },
                    },
                ),
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:7 },
                    end: AstPoint { 0:16 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:7 },
                                end: AstPoint { 0:16 },
                            },
                            value: "getLogger",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:16 },
                    end: AstPoint { 0:28 },
                },
                ident: None,
                values: Some(
                    AstValues {
                        range: AstRange {
                            start: AstPoint { 0:16 },
                            end: AstPoint { 0:28 },
                        },
                        values: [
                            [
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:17 },
                                            end: AstPoint { 0:21 },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 0:17 },
                                                        end: AstPoint { 0:21 },
                                                    },
                                                    value: "Test",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:21 },
                                            end: AstPoint { 0:22 },
                                        },
                                        ident: None,
                                        values: None,
                                        operator: Dot(
                                            AstRange {
                                                start: AstPoint { 0:21 },
                                                end: AstPoint { 0:22 },
                                            },
                                        ),
                                    },
                                ),
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:22 },
                                            end: AstPoint { 0:27 },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 0:22 },
                                                        end: AstPoint { 0:27 },
                                                    },
                                                    value: "class",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                            ],
                        ],
                    },
                ),
                operator: None,
            },
        ),
    ],
    8,
)
