crates/ast/tests/snapshots/ast__expression_multi_array_access.snap
---
source: crates/ast/tests/ast.rs
expression: ast
---
(
    [
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:7 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:0 },
                                end: AstPoint { 0:7 },
                            },
                            value: "numbers",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:7 },
                    end: AstPoint { 0:10 },
                },
                ident: Some(
                    ArrayAccess(
                        [
                            Base(
                                AstBaseExpression {
                                    range: AstRange {
                                        start: AstPoint { 0:9 },
                                        end: AstPoint { 0:10 },
                                    },
                                    ident: Some(
                                        Value(
                                            Nuget(
                                                Int(
                                                    AstInt {
                                                        range: AstRange {
                                                            start: AstPoint { 0:9 },
                                                            end: AstPoint { 0:10 },
                                                        },
                                                        value: "0",
                                                    },
                                                ),
                                            ),
                                        ),
                                    ),
                                    values: None,
                                    operator: None,
                                },
                            ),
                        ],
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:10 },
                    end: AstPoint { 0:13 },
                },
                ident: Some(
                    ArrayAccess(
                        [
                            Base(
                                AstBaseExpression {
                                    range: AstRange {
                                        start: AstPoint { 0:12 },
                                        end: AstPoint { 0:13 },
                                    },
                                    ident: Some(
                                        Value(
                                            Nuget(
                                                Int(
                                                    AstInt {
                                                        range: AstRange {
                                                            start: AstPoint { 0:12 },
                                                            end: AstPoint { 0:13 },
                                                        },
                                                        value: "0",
                                                    },
                                                ),
                                            ),
                                        ),
                                    ),
                                    values: None,
                                    operator: None,
                                },
                            ),
                        ],
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:13 },
                    end: AstPoint { 0:16 },
                },
                ident: Some(
                    ArrayAccess(
                        [
                            Base(
                                AstBaseExpression {
                                    range: AstRange {
                                        start: AstPoint { 0:15 },
                                        end: AstPoint { 0:16 },
                                    },
                                    ident: Some(
                                        Value(
                                            Nuget(
                                                Int(
                                                    AstInt {
                                                        range: AstRange {
                                                            start: AstPoint { 0:15 },
                                                            end: AstPoint { 0:16 },
                                                        },
                                                        value: "0",
                                                    },
                                                ),
                                            ),
                                        ),
                                    ),
                                    values: None,
                                    operator: None,
                                },
                            ),
                        ],
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
    ],
    10,
)
